--- a/demo.html
+++ b/demo.html
@@ -159,10 +159,7 @@
                 }
             },
             template: `
-                <div >
-                    <div v-for="(a,i) in ary" v-if="ary" >{{a}}</div>
-                    <d-s :style.prop="a" :onclick.prop="h"/>
-                    </div>
+                <div >{{a}} b {{c}}</div>
             
             `
 
