--- a/demo.html
+++ b/demo.html
@@ -141,10 +141,13 @@
         })
     </script>
     <script>
-        Vue.component('d-s', {
+        Vue.directive('qwe', {
 
+        })
+        Vue.component('d-s', {
+            props: ['qwe'],
             template: `<section>
-                    <h1>Some Thing</h1>
+                    <h1>Some Thing , {{qwe}}</h1>
                 </section>`
         })
         new Vue({
@@ -159,8 +162,11 @@
                 }
             },
             template: `
-                <div >{{a}} b {{c}}</div>
-            
+                <div >
+                    <div v-for="(a,i) in ary" v-if="ary" >{{a}}</div>
+                    <d-s www="QQ" v-bind.prop:qwe="a" :style.prop="a" @click.prop="h" @click="h"/>
+                    <div>{{a}} b {{c}}</div>
+                </div>
             `
 
         })
