--- a/demo.html
+++ b/demo.html
@@ -164,8 +164,8 @@
             template: `
                 <div >
                     <div v-for="(a,i) in ary" v-if="ary" >{{a}}</div>
-                    <d-s www="QQ" v-bind.prop:qwe="a" :style.prop="a" @click.prop="h" @click="h"/>
-                    <div>{{a}} b {{c}}</div>
+                    <d-s :eee.prop="a" v-bind.prop:qwe="a" :style.prop="a" @click.prop="h" @click="h"/>
+                    <div  :style="a">{{a}} b {{c}}</div>
                 </div>
             `
 
